--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Intive Test Yendilotto</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Detail</string>
+    <string name="no_connection">Theres not Internet connection.</string>
 </resources>
